--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,12 +146,30 @@ aside div ul {
   padding-inline-start: 40px;
 }
 
+aside div ul li {
+  margin-bottom: 5px;
+}
+
 .wp-block-list {
   list-style-type: disc;
   padding-inline-start: 0px;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-end: 20px;
+}
+
+.wp-block-list li {
+  margin-bottom: 5px;
+}
+
+.content-block .wp-block-list {
+  list-style-type: disc;
+  padding-inline-start: 0px;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 20px;
   margin-inline-end: 0px;
   padding-inline-end: 20px;
 }
